--- a/app/index.html
+++ b/app/index.html
@@ -59,11 +59,11 @@
                 <div class="splitter__white"></div>
             </div>
             <div class="header__sub-menu-item">
-                <a href="#about" class="header__link">О компании</a>
+                <a href="#about" class="header__link close-popup">О компании</a>
                 <div class="splitter__white"></div>
             </div>
-            <div class="header__sub-menu-item">
-                <a href="/product-catalog-about.html" class="header__link">Статьи</a>
+            <div class="header__sub-menu-item close-popup">
+                <a href="#news" class="header__link">Статьи</a>
                 <div class="splitter__white"></div>
             </div>
         </nav>
@@ -120,11 +120,11 @@
                 <div class="splitter__white"></div>
             </div>
             <div class="header__sub-menu-item">
-                <a href="" class="header__link">О компании</a>
+                <a href="#about" class="header__link close-popup">О компании</a>
                 <div class="splitter__white"></div>
             </div>
             <div class="header__sub-menu-item">
-                <a href="" class="header__link">Статьи</a>
+                <a href="#news" class="header__link close-popup">Статьи</a>
                 <div class="splitter__white"></div>
             </div>
         </nav>
@@ -135,6 +135,13 @@
         document.getElementById("burgerIndex").classList.add("open")
         document.getElementsByClassName("modal")[0].style.zIndex = "101"
     })
+    document.querySelectorAll(".close-popup").forEach((item)=>{
+        item.addEventListener("click", ()=> {
+            document.getElementById("burgerIndex").classList.remove("open")
+            document.getElementsByClassName("modal")[0].style.zIndex = "-1"
+        })
+    })
+
     document.getElementsByClassName("modal__back")[0].addEventListener("click", ()=> {
         document.getElementById("burgerIndex").classList.remove("open")
         document.getElementsByClassName("modal")[0].style.zIndex = "-1"
@@ -230,8 +237,7 @@
         </div>
     </section>
 </div>
-        <div id="about">
-            <section class="card-list page-padding">
+        <section class="card-list page-padding">
     <div class="card-list__item item">
         <div class="item__up">
             <div class="item__logo">
@@ -314,7 +320,7 @@
 
         <img class="main-about__doc"src="img/about/01.png" alt="">
 
-    <div class="main-about__info">
+    <div id="about" class="main-about__info">
         <div class="main-about__title">О компании</div>
         <div class="main-about__name">«ООО БУРОВЫЕ ТЕХНОЛОГИИ»</div>
         <div class="main-about__text">
@@ -328,7 +334,6 @@
     </div>
 </section>
 
-        </div>
         <section class="main-help">
     <div class="main-help__container2 page-padding">
         <div class="main-help__info">
@@ -512,7 +517,7 @@
     </div>
   </div>
 </section>
-        <section class="main-about-big page-padding__left">
+        <section id="news" class="main-about-big page-padding__left">
     <div class="main-about-big__title">
         Больше о компании
     </div>
