--- a/app/news.html
+++ b/app/news.html
@@ -53,11 +53,11 @@
                 <div class="splitter__white"></div>
             </div>
             <div class="header__sub-menu-item">
-                <a href="#about" class="header__link">О компании</a>
+                <a href="#about" class="header__link close-popup">О компании</a>
                 <div class="splitter__white"></div>
             </div>
-            <div class="header__sub-menu-item">
-                <a href="/product-catalog-about.html" class="header__link">Статьи</a>
+            <div class="header__sub-menu-item close-popup">
+                <a href="#news" class="header__link">Статьи</a>
                 <div class="splitter__white"></div>
             </div>
         </nav>
@@ -114,11 +114,11 @@
                 <div class="splitter__white"></div>
             </div>
             <div class="header__sub-menu-item">
-                <a href="" class="header__link">О компании</a>
+                <a href="#about" class="header__link close-popup">О компании</a>
                 <div class="splitter__white"></div>
             </div>
             <div class="header__sub-menu-item">
-                <a href="" class="header__link">Статьи</a>
+                <a href="#news" class="header__link close-popup">Статьи</a>
                 <div class="splitter__white"></div>
             </div>
         </nav>
@@ -129,6 +129,13 @@
         document.getElementById("burgerIndex").classList.add("open")
         document.getElementsByClassName("modal")[0].style.zIndex = "101"
     })
+    document.querySelectorAll(".close-popup").forEach((item)=>{
+        item.addEventListener("click", ()=> {
+            document.getElementById("burgerIndex").classList.remove("open")
+            document.getElementsByClassName("modal")[0].style.zIndex = "-1"
+        })
+    })
+
     document.getElementsByClassName("modal__back")[0].addEventListener("click", ()=> {
         document.getElementById("burgerIndex").classList.remove("open")
         document.getElementsByClassName("modal")[0].style.zIndex = "-1"
@@ -180,7 +187,7 @@
     </div>
 </section>
 
-        <section class="main-about-big page-padding__left">
+        <section id="news" class="main-about-big page-padding__left">
     <div class="main-about-big__title">
         Больше о компании
     </div>
