--- a/app/pages/product-catalog-about.html
+++ b/app/pages/product-catalog-about.html
@@ -42,12 +42,10 @@
                 <div class="product-catalog-about__card-list">
                     <a class="card" href="#">
                         <div class="card__img">
-                            <img src="img/product-catalog/01.png" alt="">
+                            <img src="img/product-catalog/02.png" alt="">
                         </div>
                         <div class="card__title">Блок смешивание</div>
-                        <div class="card__text">Lorem Ipsum, giving
-                            information on its origins,
-                            as well as a random
+                        <div class="card__text">
                             Lipsum generator.
                         </div>
                         <p class="card__link" >Смотреть подробнее</p>
@@ -57,10 +55,7 @@
                             <img src="img/product-catalog/01.png" alt="">
                         </div>
                         <div class="card__title">Блок смешивание</div>
-                        <div class="card__text">Lorem Ipsum, giving
-                            information on its origins,
-                            as well as a random
-                            Lipsum generator.
+                        <div class="card__text">Lorem Ipsum,
                         </div>
                         <p class="card__link" >Смотреть подробнее</p>
                     </a>
